fix: security remediation + missing API endpoints
P0 Security:
- Lock admin/video-mutation/contact-GET endpoints behind auth
- Enforce ROLE_ADMIN on admin endpoints
- Remove hardcoded JWT secret default (app fails to start without env var)
- Fix CORS with explicit origins instead of wildcard
- Add custom auth entry point and access denied handler (JSON responses)
- Add Role constants (ROLE_ADMIN/ROLE_TEACHER/ROLE_STUDENT)
- JWT filter now sets proper GrantedAuthority from token role claim

P1 Missing Endpoints:
- Mood logging: POST/GET/DELETE /api/mood-logs
- Progress tracking: GET/POST /api/progress endpoints
- Password reset: /api/auth/forgot-password + /api/auth/reset-password
  with email service, token hashing, expiry
- Course enrollment: CRUD /api/enrollments with new entity
- Remove dead OAuth buttons (backend config was commented out)
- Remove broken /api/chat custom handler (chatbot uses default handler)

P2 Quality:
- Fix frontend package.json name (@figma/my-make-file -> ateion-frontend)
- Add admin role migration SQL
- Add spring-boot-starter-mail dependency
- Clean up commented OAuth config in application.properties