@@ -6,6 +6,7 @@ import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import lombok.RequiredArgsConstructor;
+import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
@@ -14,6 +15,7 @@ import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
@@ -25,7 +27,6 @@ import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.List;
 
 @Configuration
@@ -35,6 +36,9 @@ public class SecurityConfig {
 
     private final JwtUtil jwtUtil;
 
+    @Value("${app.frontend.url}")
+    private String frontendUrl;
+
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http) throws Exception {
         http
@@ -42,22 +46,53 @@ public class SecurityConfig {
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
                 .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
                 .exceptionHandling(exceptions -> exceptions
-                        .authenticationEntryPoint((request, response, exception) ->
-                                response.sendError(HttpServletResponse.SC_UNAUTHORIZED, "Unauthorized"))
+                        .authenticationEntryPoint((request, response, exception) -> {
+                            response.setContentType("application/json");
+                            response.setStatus(HttpServletResponse.SC_UNAUTHORIZED);
+                            response.getWriter().write("{\"error\":\"Unauthorized\",\"message\":\"Authentication is required\"}");
+                        })
+                        .accessDeniedHandler((request, response, exception) -> {
+                            response.setContentType("application/json");
+                            response.setStatus(HttpServletResponse.SC_FORBIDDEN);
+                            response.getWriter().write("{\"error\":\"Forbidden\",\"message\":\"Insufficient permissions\"}");
+                        })
                 )
                 .authorizeHttpRequests(auth -> auth
+                        // OPTIONS preflight - always open
                         .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
-                        .requestMatchers("/api/auth/**", "/api/contact/**", "/api/admin/**").permitAll()
+                        // Auth endpoints (open for registration/login)
+                        .requestMatchers("/api/auth/**").permitAll()
+                        // Health check
                         .requestMatchers(HttpMethod.GET, "/api/ping").permitAll()
+                        // Public course listing and content reading
                         .requestMatchers(HttpMethod.GET, "/api/content/courses").permitAll()
-                        .requestMatchers(HttpMethod.GET, "/api/content/audiobooks").permitAll()
-                        .requestMatchers(HttpMethod.GET, "/api/content/audiobooks/**").permitAll()
-                        .requestMatchers(HttpMethod.POST, "/api/content/audiobooks").permitAll()
-                        .requestMatchers(HttpMethod.PUT, "/api/content/audiobooks/**").permitAll()
-                        .requestMatchers(HttpMethod.DELETE, "/api/content/audiobooks/**").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/content/courses/**").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/content/videos/**").permitAll()
+                        // Public video reading
                         .requestMatchers(HttpMethod.GET, "/api/videos/public/**").permitAll()
                         .requestMatchers(HttpMethod.GET, "/api/videos/**").permitAll()
-                        .requestMatchers("/api/chat").permitAll()
+                        // Public audiobook reading
+                        .requestMatchers(HttpMethod.GET, "/api/content/audiobooks").permitAll()
+                        .requestMatchers(HttpMethod.GET, "/api/content/audiobooks/**").permitAll()
+                        // Gamification leaderboard (public read)
+                        .requestMatchers(HttpMethod.GET, "/api/gamification/leaderboard").permitAll()
+                        // Contact form submission (open, anyone can send a message)
+                        .requestMatchers(HttpMethod.POST, "/api/contact").permitAll()
+                        // Reading contact messages requires admin role
+                        .requestMatchers(HttpMethod.GET, "/api/contact").hasRole("ADMIN")
+                        .requestMatchers(HttpMethod.GET, "/api/contact/**").hasRole("ADMIN")
+                        // Admin endpoints: only users with ROLE_ADMIN
+                        .requestMatchers("/api/admin/**").hasRole("ADMIN")
+                        // Video/audiobook mutations require authentication (admin checked separately)
+                        .requestMatchers(HttpMethod.POST, "/api/videos/**").authenticated()
+                        .requestMatchers(HttpMethod.PUT, "/api/videos/**").authenticated()
+                        .requestMatchers(HttpMethod.DELETE, "/api/videos/**").authenticated()
+                        .requestMatchers(HttpMethod.POST, "/api/content/audiobooks/**").authenticated()
+                        .requestMatchers(HttpMethod.PUT, "/api/content/audiobooks/**").authenticated()
+                        .requestMatchers(HttpMethod.DELETE, "/api/content/audiobooks/**").authenticated()
+                        // Module mutations require auth
+                        .requestMatchers(HttpMethod.POST, "/api/modules/**").authenticated()
+                        // Everything else requires authentication
                         .anyRequest().authenticated()
                 )
                 .addFilterBefore(jwtAuthFilter(), UsernamePasswordAuthenticationFilter.class);
@@ -73,9 +108,16 @@ public class SecurityConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(Collections.singletonList("*"));
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Collections.singletonList("*"));
+        configuration.setAllowedOriginPatterns(List.of(
+                frontendUrl != null && !frontendUrl.isBlank() ? frontendUrl : "http://localhost:3000",
+                "http://localhost:3000",
+                "http://localhost:5173",
+                "https://*.vercel.app",
+                "https://ateion.com",
+                "https://www.ateion.com"
+        ));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedHeaders(List.of("Authorization", "Content-Type", "X-Requested-With", "Accept", "Origin"));
         configuration.setAllowCredentials(true);
         configuration.setMaxAge(3600L);
 
@@ -102,17 +144,17 @@ public class SecurityConfig {
                         try {
                             if (jwtUtil.validateToken(token)) {
                                 String email = jwtUtil.extractEmail(token);
+                                String role = jwtUtil.extractRole(token);
                                 UsernamePasswordAuthenticationToken authentication =
                                         new UsernamePasswordAuthenticationToken(
                                                 email,
                                                 null,
-                                                Collections.emptyList()
+                                                List.of(new SimpleGrantedAuthority(role))
                                         );
                                 SecurityContextHolder.getContext().setAuthentication(authentication);
                             }
-                        } catch (Exception ignored) {
-                            // Invalid or expired tokens are treated as unauthenticated.
-                            // Public routes continue; protected routes are rejected by Spring Security.
+                        } catch (Exception e) {
+                            SecurityContextHolder.clearContext();
                         }
                     }
                 }
